# static-lib-dep-tree

./: README.md  entry_points.cfg  setup.cfg
static_lib_dep_tree/: __init__.py  static_lib_dep_tree.py
static_lib_dep_tree/examples/: .gitignore  a.cpp  all_in_one.hpp  b.cpp  c.cpp  d.cpp  e.cpp
tests/: __init__.py  test_static_lib_dep_tree.py
