[metadata]
name = static-lib-dep-tree
version = 0.0.1
description = static-lib-dep-tree: draw dependency graph of static link library command
url = 
author = 
author_email = 
license = MIT
long_description = file: README.md

[options]
zip_safe = False
install_requires = graphviz
packages = find:
entry_points = file: entry_points.cfg

[options.packages.find]
exclude = tests; examples
