[metadata]
name = static-lib-dep-tree
version = 0.0.1
description = static-lib-dep-tree: draw dependency graph of static link library command
url = https://github.com/umaumax/static-lib-dep-tree
author = umaumax
author_email = umauma7083@gmail.com
license = MIT
long_description = file: README.md

[options]
zip_safe = False
install_requires =
  graphviz
  networkx
  pygraphviz
packages = find:
entry_points = file: entry_points.cfg

[options.packages.find]
exclude = tests
